# nlp-100knocks

./: README.md  pyproject.toml
ch01/: 00.py  01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py
ch02/: 10.py  10.sh  11.py  11.sh  12.sh  13.sh  14.sh  15.sh  16.sh  17.sh  18.sh  19.sh
